--- a/style.css
+++ b/style.css
@@ -136,12 +136,13 @@ body {
   align-content: center;
   justify-content: center;
   gap: 10px;
-  background-color: lightblue;
 }
-.container .container-main .om-oss-wrapper .om-oss-title {
-  font-family: "Roboto", sans-serif;
+.container .container-main .om-oss-wrapper .om-oss-title p {
   color: rgb(23, 19, 19);
-  background-color: lightgray;
+  font-family: "Barlow", sans-serif;
+  font-size: 1.4rem;
+  text-align: start;
+  padding: 6px;
 }
 .container .container-main .om-oss-wrapper .om-oss-img img {
   width: 60%;
@@ -150,7 +151,6 @@ body {
 }
 .container .container-main .om-oss-wrapper .om-oss-text {
   width: 50%;
-  background-color: gray;
   margin: 0 auto;
 }
 .container .container-main .om-oss-wrapper .om-oss-text p {
@@ -158,6 +158,7 @@ body {
 }
 .container .container-main .service-wrapper {
   margin-top: 20px;
+  margin-bottom: 50px;
   width: 100%;
   gap: 40px;
   display: flex;
@@ -166,8 +167,14 @@ body {
   align-content: center;
   align-items: center;
 }
+.container .container-main .service-wrapper .service-title p {
+  color: rgb(23, 19, 19);
+  font-family: "Barlow", sans-serif;
+  font-size: 2rem;
+}
 .container .container-main .service-wrapper .service-items {
-  width: 200px;
+  width: 50%;
+  max-width: 300px;
   height: 200px;
   padding: 20px;
   border-radius: 10px;
