--- a/style.scss
+++ b/style.scss
@@ -174,14 +174,19 @@ body{
     align-content: center;
     justify-content: center;
     gap:10px;
-    background-color: lightblue;
+    
    
 
     .om-oss-title{
-    font-family: 'Roboto', sans-serif;
+      
+   
+   p{
     color: rgb(23, 19, 19);
-    background-color: lightgray;
-    
+    font-family: 'Barlow', sans-serif;
+    font-size: 1.4rem;
+    text-align: start;
+    padding: 6px;
+   }
     }
 
     .om-oss-img{
@@ -193,7 +198,6 @@ body{
     }
     .om-oss-text{
      width: 50%;
-     background-color: gray;
      margin: 0 auto;
       p{
         font-size: 1rem;
@@ -203,6 +207,7 @@ body{
 
     .service-wrapper{      
        margin-top: 20px;
+       margin-bottom: 50px;
         width: 100%;
         gap:40px;
         display: flex;
@@ -210,9 +215,18 @@ body{
         justify-content: space-around;
         align-content: center;
         align-items: center;
+
+        .service-title{
+          p{
+            color: rgb(23, 19, 19);
+            font-family: 'Barlow', sans-serif;
+            font-size: 2rem;
+           }
+        }
        
         .service-items{
-            width:200px;
+            width:50%;
+          max-width: 300px;
             height: 200px;
             padding: 20px;
             border-radius: 10px;
