--- a/style.css
+++ b/style.css
@@ -137,26 +137,29 @@ body {
   justify-content: center;
   gap: 10px;
 }
+.container .container-main .om-oss-wrapper .om-oss-title {
+  text-align: center;
+}
 .container .container-main .om-oss-wrapper .om-oss-title p {
   color: rgb(23, 19, 19);
   font-family: "Barlow", sans-serif;
   font-size: 1.4rem;
-  text-align: start;
+  text-align: center;
   padding: 6px;
 }
 .container .container-main .om-oss-wrapper .om-oss-img img {
-  width: 60%;
+  width: 80%;
   border-radius: 100px;
-  border: 1px solid black;
 }
 .container .container-main .om-oss-wrapper .om-oss-text {
-  width: 50%;
+  width: 70%;
   margin: 0 auto;
 }
 .container .container-main .om-oss-wrapper .om-oss-text p {
-  font-size: 1rem;
+  font-size: 1.2rem;
 }
 .container .container-main .service-wrapper {
+  background-color: rgba(173, 229, 230, 0.258);
   margin-top: 20px;
   margin-bottom: 50px;
   width: 100%;
@@ -170,13 +173,13 @@ body {
 .container .container-main .service-wrapper .service-title p {
   color: rgb(23, 19, 19);
   font-family: "Barlow", sans-serif;
-  font-size: 2rem;
+  font-size: 1rem;
 }
 .container .container-main .service-wrapper .service-items {
-  width: 50%;
+  background-color: #fff;
+  width: 70%;
+  height: 250px;
   max-width: 300px;
-  height: 200px;
-  padding: 20px;
   border-radius: 10px;
   display: flex;
   flex-direction: column;
@@ -187,11 +190,12 @@ body {
 }
 .container .container-main .service-wrapper .service-items .service-text {
   text-align: center;
-  padding: 5px;
 }
 .container .container-main .service-wrapper .service-items img {
-  height: 50%;
-  margin: 20px 20px;
+  width: 40%;
+  margin: auto;
+  margin-top: 20px;
+  margin-bottom: 2px;
 }
 .container footer {
   background-color: darkgray;
