--- a/style.scss
+++ b/style.scss
@@ -178,34 +178,36 @@ body{
    
 
     .om-oss-title{
+      text-align: center;
       
    
    p{
     color: rgb(23, 19, 19);
     font-family: 'Barlow', sans-serif;
     font-size: 1.4rem;
-    text-align: start;
+    text-align: center;
     padding: 6px;
    }
     }
 
     .om-oss-img{
       img{
-        width:60%;
+        width:80%;
         border-radius: 100px;
-       border: 1px solid black;
+      
       }
     }
     .om-oss-text{
-     width: 50%;
+     width: 70%;
      margin: 0 auto;
       p{
-        font-size: 1rem;
+        font-size: 1.2rem;
       }
     }
   }
 
-    .service-wrapper{      
+    .service-wrapper{  
+      background-color: rgba(173, 229, 230, 0.258);    
        margin-top: 20px;
        margin-bottom: 50px;
         width: 100%;
@@ -220,15 +222,15 @@ body{
           p{
             color: rgb(23, 19, 19);
             font-family: 'Barlow', sans-serif;
-            font-size: 2rem;
+            font-size: 1rem;
            }
         }
        
         .service-items{
-            width:50%;
+          background-color: #fff;
+            width:70%;
+            height:250px;
           max-width: 300px;
-            height: 200px;
-            padding: 20px;
             border-radius: 10px;
             display: flex;
             flex-direction: column;
@@ -242,11 +244,15 @@ body{
 
             .service-text{
               text-align: center;
-              padding: 5px;
+              
+             
+              
             }
             img{
-              height:50%;
-              margin:20px 20px;
+              width: 40%;
+              margin:auto;
+              margin-top:20px;
+              margin-bottom: 2px;
             }
         }
         }
