--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ body {
   text-align: center;
 }
 .container .header nav li a {
-  margin-left: 0px;
+  margin-left: 70px;
   text-decoration: none;
   color: #000000;
   font-size: 18px;
@@ -175,15 +175,16 @@ body {
   font-family: "Barlow", sans-serif;
   font-size: 1rem;
 }
+.container .container-main .service-wrapper .service-long-text {
+  background-color: lightgray;
+}
 .container .container-main .service-wrapper .service-items {
   background-color: #fff;
-  width: 70%;
-  height: 250px;
-  max-width: 300px;
-  border-radius: 10px;
+  width: 90%;
+  height: 50vh;
+  border-radius: 20px;
   display: flex;
   flex-direction: column;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
 }
 .container .container-main .service-wrapper .service-items:hover {
   background-color: rgba(245, 219, 115, 0.395);
