--- a/style.scss
+++ b/style.scss
@@ -78,7 +78,7 @@ body{
       }
     
     a {
-      margin-left: 0px;
+      margin-left: 70px;
       text-decoration: none;
       color: #000000;
       font-size: 18px;
@@ -225,17 +225,20 @@ body{
             font-size: 1rem;
            }
         }
-       
+       .service-long-text{
+        background-color: lightgray;
+       }
         .service-items{
           background-color: #fff;
-            width:70%;
-            height:250px;
-          max-width: 300px;
-            border-radius: 10px;
+            width:90%;
+            height: 50vh;
+           
+          
+            border-radius: 20px;
             display: flex;
             flex-direction: column;
            
-            box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+           
            
             &:hover {
               background-color:rgba(245, 219, 115, 0.395);
