--- a/style.css
+++ b/style.css
@@ -160,40 +160,50 @@ body {
 }
 .container .container-main .service-wrapper {
   background-color: rgba(173, 229, 230, 0.258);
-  margin-top: 20px;
-  margin-bottom: 50px;
   width: 100%;
-  gap: 40px;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   align-content: center;
   align-items: center;
+  gap: 5px;
 }
 .container .container-main .service-wrapper .service-title p {
   color: rgb(23, 19, 19);
   font-family: "Barlow", sans-serif;
   font-size: 1rem;
 }
-.container .container-main .service-wrapper .service-long-text .service-text {
-  text-align: center;
-  font-size: 1.3rem;
-  font-weight: 200px;
-}
-.container .container-main .service-wrapper .service-items {
-  background-color: #fff;
-  width: 90%;
-  height: 60vh;
-  border-radius: 20px;
+.container .container-main .service-wrapper .service-item-wrapper {
   display: flex;
   flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  height: 300px;
+  width: 100%;
 }
-.container .container-main .service-wrapper .service-items:hover {
+.container .container-main .service-wrapper .service-item-wrapper .service-item {
+  background-color: #fff;
+  height: 70%;
+  width: 60%;
+  border-radius: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
+.container .container-main .service-wrapper .service-item-wrapper .service-item img {
+  width: 15%;
+}
+.container .container-main .service-wrapper .service-item-wrapper .service-item:hover {
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
 }
-.container .container-main .service-wrapper .service-items img {
-  width: 20%;
-  margin: auto;
+.container .container-main .service-wrapper .service-text {
+  width: 60%;
+}
+.container .container-main .service-wrapper .service-text .service-text-title {
+  text-align: center;
+  font-size: 1.2rem;
+  font-weight: 200px;
 }
 .container footer {
   background-color: darkgray;
