--- a/style.scss
+++ b/style.scss
@@ -208,15 +208,13 @@ body{
 
     .service-wrapper{  
       background-color: rgba(173, 229, 230, 0.258);    
-       margin-top: 20px;
-       margin-bottom: 50px;
         width: 100%;
-        gap:40px;
         display: flex;
         flex-direction: column;
         justify-content: space-around;
         align-content: center;
         align-items: center;
+        gap: 5px;
 
         .service-title{
           p{
@@ -225,40 +223,52 @@ body{
             font-size: 1rem;
            }
         }
-       .service-long-text{
-        
-
-        .service-text{
-          text-align: center;
-          font-size: 1.3rem;
-          font-weight: 200px;
+        .service-item-wrapper{
+          display: flex;
+          flex-direction: column;
+          justify-content: space-around;
+          align-items: center;
           
+          height: 300px;
+          width: 100%;
+          
+
+          .service-item{
+            background-color: #fff;
+              height: 70%;
+              width: 60%;
+              border-radius: 20px;
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              gap:10px;
+              
+              img{
+
+                width: 15%;
+                
+              }
+              
+              &:hover {
+                box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+            }
+             
+          }
+         }
+       .service-text{
+        width: 60%;
+        
+       
+
+        .service-text-title{
+          text-align: center;
+          font-size: 1.2rem;
+          font-weight: 200px;
+    
           
         }
        }
-        .service-items{
-          background-color: #fff;
-            width:90%;
-            height: 60vh;
-            border-radius: 20px;
-            display: flex;
-            flex-direction: column;
-            
-           
-           
-           
-            &:hover {
-              box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-          }
-          
-
-           
-            img{
-              width: 20%;
-              margin:auto;
-              
-            }
-        }
+     
         }
         }
 
